--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       </div>
     </div>
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/navnit-kumar-tiwari-038a39123/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/Navnitkumartiw1">Twitter</a>
+      <a class="footer-link" href="https://navnittiwari.github.io/cv/">Website</a>
       <p>© 2018 Name Surname.</p>
     </div>
   </body>
