--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <div class="profile">
         <img src="images/navnit.png" alt="">
         <h2>Hello.</h2>
-        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        <p>I am a full-stack web developer & digital marketer.</p>
       </div>
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="" alt="">
+          <img class="" src="images/web-developer.png" alt="">
           <h3>Lorem & Ipsum</h3>
           <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
         </div>
@@ -40,7 +40,7 @@
         <h2>Get In Touch</h2>
         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
         <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <a class="btn" href="mailto:navnittiwari7@gmail.com">CONTACT ME</a>
       </div>
     </div>
     <div class="bottom-container">
