--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Navnit Tiwari</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Pacifico&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-container">
@@ -26,20 +26,20 @@
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img class="" src="images/web-developer.png" alt="">
-          <h3>Lorem & Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <h3>Website developer</h3>
+          <p>Currently working on <a href="https://www.ramsonsperfumes.com">Ramsons Perfumes</a>, Using wordpress</p>
         </div>
         <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <img class="" src="images/Digital-Marketing.png" alt="">
+          <h3>Digital Marketing</h3>
+          <p>Digital marketing services for platforms like Facebook, Instagram, Twitter etc.</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <h3>Email:- navnittiwari7@gmail.com</h3>
+        <p>You can check my social media profiles, links are given below.</p>
         <a class="btn" href="mailto:navnittiwari7@gmail.com">CONTACT ME</a>
       </div>
     </div>
@@ -47,7 +47,7 @@
       <a class="footer-link" href="https://www.linkedin.com/in/navnit-kumar-tiwari-038a39123/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/Navnitkumartiw1">Twitter</a>
       <a class="footer-link" href="https://navnittiwari.github.io/cv/">Website</a>
-      <p>© 2018 Name Surname.</p>
+      <p>© 2018 Navnit Kumar Tiwari</p>
     </div>
   </body>
 </html>
