--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Navnit.</h1>
-      <p>a <span class="web">web</span> developer.</p>
+      <h2 class="web-developer">a <span class="web">web</span> developer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
