--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="images/web-developer.png" alt="">
+          <img class="developer-img" src="images/web-developer.png" alt="">
           <h3>Website developer</h3>
-          <p>Currently working on <a href="https://www.ramsonsperfumes.com">Ramsons Perfumes</a>, Using wordpress</p>
+          <p>I started to learning code when i was 16 beacuse i wanted to have have my own software and websites. The world of computer</p>
         </div>
         <div class="skill-row">
-          <img class="" src="images/Digital-Marketing.png" alt="">
+          <img class="marketing-img" src="images/Digital-Marketing.png" alt="">
           <h3>Digital Marketing</h3>
-          <p>Digital marketing services for platforms like Facebook, Instagram, Twitter etc.</p>
+          <p>Digital marketing services for platforms like Facebook, Instagram, Twitter etc. I have been doing this since two years now.</p>
         </div>
       </div>
       <hr>
@@ -51,4 +51,5 @@
     </div>
   </body>
 </html>
+
 
