--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="profile">
         <img src="images/navnit.png" alt="">
         <h2>Hello.</h2>
-        <p>I am a full-stack web developer & digital marketer.</p>
+        <p class="intro">I am a full-stack web developer & digital marketer.</p>
       </div>
       <hr>
       <div class="skills">
@@ -51,5 +51,3 @@
     </div>
   </body>
 </html>
-
-
