--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="skill-row">
           <img class="developer-img" src="images/web-developer.png" alt="">
           <h3>Website developer</h3>
-          <p>I started to learning code when i was 16 beacuse i wanted to have have my own software and websites. The world of computer</p>
+          <p>I started to learning code when i was 16 beacuse i wanted to have have my own software and websites. The world of computer has always amazed me specially the internet and artificial intelligence.</p>
         </div>
         <div class="skill-row">
           <img class="marketing-img" src="images/Digital-Marketing.png" alt="">
@@ -39,7 +39,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Email:- navnittiwari7@gmail.com</h3>
-        <p>You can check my social media profiles, links are given below.</p>
+        <p class="contact-message">You can check my social media profiles, links are given below.</p>
         <a class="btn" href="mailto:navnittiwari7@gmail.com">CONTACT ME</a>
       </div>
     </div>
@@ -47,7 +47,8 @@
       <a class="footer-link" href="https://www.linkedin.com/in/navnit-kumar-tiwari-038a39123/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/Navnitkumartiw1">Twitter</a>
       <a class="footer-link" href="https://navnittiwari.github.io/cv/">Website</a>
-      <p>© 2018 Navnit Kumar Tiwari</p>
+      <p class="copyright">© 2018 Navnit Kumar Tiwari</p>
     </div>
   </body>
 </html>
+
