--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
   <footer>
     <div class="row">
       <a class="btn" href="https://navnittiwari.github.io/cv/"> My CV </a>
+      <a class="btn" href="https://navnittiwari.github.io/css-site/"> Designed CV </a>
+      <a class="btn" href="https://navnittiwari.github.io/tindog/"> tinDog </a>
+      <a class="btn" href="https://navnittiwari.github.io/dicegame/"> Dice Game </a>
     </div>
   </footer>
 </html>
